Fixed bug that was breaking article pages due to lack of pre block wrapping

--- a/themes/zooberry/assets/css/container.css
+++ b/themes/zooberry/assets/css/container.css
@@ -202,6 +202,7 @@ pre {
   background: var(--codeblock) !important;
   padding: 2rem;
   border-radius: 20px;
+  white-space: pre-wrap;
   overflow-x: auto;
 }
 
